--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JORNAL</title>
+</head>
+<body>
+   <header>
+   <img src="foto" alt="">
+   <ul>
+     <li>contatos</li>
+     <li>informaçãos</li>
+   </ul>
+   </header> 
+   <main>
 
+   </main>
+   <footer>
+
+   </footer>
+</body>
+</html>
