--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JORNAL</title>
+      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
-   <img src="foto" alt="">
-   <ul>
-     <li>contatos</li>
-     <li>informaçãos</li>
+   <header class="cabecalho">
+   <img class="logo" src="logo.png" alt="">
+   <ul class="menu">
+      <li class="menu-item"> contatos</li>
+      <li class="menu-item"> informaçãos</li>
    </ul>
+   
    </header> 
    <main>
 
