--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
    
    </header> 
    <main>
+  
+ <section class="principal">
+   <h1 class="principal__titulo">jornals</h1>
+   <p class="principal__texto">a live breaking news e 
+      um local de informaçãos
+      e de entretenimento para
+      voce e para sua cidade.</p>
+   <img src="" alt="" class="principal__imagem">
 
    </main>
    <footer>
