--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
    <main>
   
  <section class="principal">
+     <div class="texto-titulo">
    <h1 class="principal__titulo">jornals</h1>
    <p class="principal__texto">a live breaking news e 
       um local de informaçãos
       e de entretenimento para
       voce e para sua cidade.</p>
-   <img src="" alt="" class="principal__imagem">
+   </div>
+   <img src="foto.principal.png" alt="" class="principal__imagem">
 
    </main>
    <footer>
